--- a/html/Marked.html
+++ b/html/Marked.html
@@ -36,7 +36,7 @@
                  topic of the persona you have chosen.</p>
                 <p>This was my first individual project, so everything was new to me, and on top of that I had 
                 hardly any experience in writing HTML and CSS. So it was definitely a challenge, but I thought it was a fun project and I'm proud of the outcome.</p>
-               <br>
+             <p><em>*I wanted to show you my website, but i unfortunately lost the info</em></p>
             </section>
             <section>
                 <p><strong> Client: </strong> Hogeschool van Amsterdam</p>
@@ -53,10 +53,10 @@
         <h3>Contact</h3>
         <section>
             <ul>
-                <li>Annika.mekkelholt@hva.nl</Li>
+                <li><a href="mailto:annika.mekkelholt@hva.nl">Annika.mekkelholt@hva.nl</a></Li>
                 <Li>+31 6 16364592</Li>
             </ul>
-            <a href="#"><img src="../Img/Instagram.png" alt="Instagram icon"></a>
+            <a href="https://www.instagram.com/annikamekk/" target="_blank"><img src="../Img/Instagram.png" alt="Instagram icon"></a>
             <a href="https://www.linkedin.com/in/annika-mekkelholt-7b557429b/" target="_blank"><img src="../Img/LinkedIn.png" alt="Linked in icon"></a>
         </section>
         <img src="../Img/LogoAM.png" alt="my logo">
