--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <h3>Contact</h3>
         <section>
             <ul>
-                <Li>Annika.mekkelholt@hva.nl</Li>
+                <li><a href="mailto:annika.mekkelholt@hva.nl">Annika.mekkelholt@hva.nl</a></Li>
                 <Li>+31 6 16364592</Li>
             </ul>
             <a href="https://www.instagram.com/annikamekk/" target="_blank"><img src="Img/Instagram.png" alt="Instagram icon"></a>
