--- a/html/Annika.html
+++ b/html/Annika.html
@@ -57,10 +57,10 @@
         <h3>Contact</h3>
         <section>
             <ul>
-                <li>Annika.mekkelholt@hva.nl</Li>
+                <li><a href="mailto:annika.mekkelholt@hva.nl">Annika.mekkelholt@hva.nl</a></Li>
                 <Li>+31 6 16364592</Li>
             </ul>
-            <a href="#"><img src="../Img/Instagram.png" alt="Instagram icon"></a>
+            <a href="https://www.instagram.com/annikamekk/" target="_blank"><img src="../Img/Instagram.png" alt="Instagram icon"></a>
             <a href="https://www.linkedin.com/in/annika-mekkelholt-7b557429b/" target="_blank"><img src="../Img/LinkedIn.png" alt="Linked in icon"></a>
         </section>
         <img src="../Img/LogoAM.png" alt="my logo">
