--- a/html/Absolut.html
+++ b/html/Absolut.html
@@ -38,7 +38,9 @@
                     I have learned a lot in this profession and have also invested a lot of time in it.</p>
                 <p>And I just want to say that below is a mockup of my site, but pink and that I am very proud of it.
                     That's one of the 5 things I added extra. With a button you can change the blue layout to the pink layout!</p>
-                    <br>
+        
+                    <p><em>*Put in on mobile version to get the real site, because it's not responsive:)</em></p>
+                   
                 <a href="https://annikamekk.github.io/blokwebFED/" target="_blank">GitHub Link</a>
             </section>
             <section>
