--- a/html/Aboutme.html
+++ b/html/Aboutme.html
@@ -28,10 +28,10 @@
                 <p><strong>HI!</strong>My name is Annika Mekkelholt and I'm studying Communication & Multimedia Design at HvA. 
                 I love concerts, friends, animals and to travel! I want to get as much life experience as i can get and learn 
                 so much from people who have different 'life-styles' as me.</p>
-                <p>My dream is to travel the world while working and i really want to volunteer more in beautiful places with beautiful
-                people and help those who need it;). I already did one volunteer project in Thailand,2022 and i had the best time there. 
+                <p>My dream is to travel the world while working and I really want to volunteer more in beautiful places with beautiful
+                people and help those who need it;). I already did one volunteer project in Thailand,2022 and I had the best time there. 
                 It made me want to do more in the future. 
-                My biggest passion is definitely traveling as far as i can go, i have a long way to go but i already 
+                My biggest passion is definitely traveling as far as I can go, I have a long way to go but i already 
                 have my bucket list and things planned in the future.</p>
                 <p>I also have been creative since I was little and especially with drawing and painting. Now 
                 I really enjoy digital design in collaboration with coding.</p>
@@ -41,12 +41,11 @@
                 Download my CV</a>
             </section>
             <img src="../Img/CVfotocropped.png" alt="a picture of me">
-            
         </div>
         
         <section>
             <h2>Skills</h2>
-            <label for="skills">XD</label>
+            <label>XD</label>
             <progress id="skills" value="90" max="100"> 90</progress>
             <label for="skills">Figma</label>
             <progress id="skills" value="50" max="100"> 50</progress>
@@ -80,8 +79,9 @@
         <span></span>
         <h3>Contact</h3>
         <section>
+            <h4>hi</h4>
             <ul>
-                <li><a href="mailto:annika.mekkelholt@hva.nl">Annika.mekkelholt@hva.nl</a></Li>
+                  <li><a href="mailto:annika.mekkelholt@hva.nl">Annika.mekkelholt@hva.nl</a></Li>
                 <Li>+31 6 16364592</Li>
             </ul>
             <a href="https://www.instagram.com/annikamekk/" target="_blank"><img src="../Img/Instagram.png" alt="Instagram icon"></a>
@@ -89,5 +89,7 @@
         </section>
         <img src="../Img/LogoAM.png" alt="my logo">
     </footer>
+
+    <script defer src="../script.js"></script>
 </body>
 </html>
