--- a/html/Absolut.html
+++ b/html/Absolut.html
@@ -44,6 +44,7 @@
                 <a href="https://annikamekk.github.io/blokwebFED/" target="_blank">GitHub Link</a>
             </section>
             <section>
+                <h3>hidden</h3>
                 <p><strong> Client: </strong> Hogeschool van Amsterdam</p>
                 <p><strong>Challenge: </strong>To recreate a website for a better accessibility to screenreaders.</p>
                 <p><strong> Tools: </strong> Visual Studio Code.</p>
@@ -58,6 +59,7 @@
         <span></span>
         <h3>Contact</h3>
         <section>
+            <h4>hi</h4>
             <ul>
                 <li><a href="mailto:annika.mekkelholt@hva.nl">Annika.mekkelholt@hva.nl</a></Li>
                 <Li>+31 6 16364592</Li>
