--- a/html/Mekkactive.html
+++ b/html/Mekkactive.html
@@ -40,6 +40,7 @@
                     I didn't put much time into it, especially with sketches, I do want to put more time into that in the future.</p>
             </section>
             <section>
+                <h3>hidden</h3>
                 <p><strong> Client: </strong> Self employed person. </p>
                 <p><strong>Challenge: </strong> Make a logo that has to do something with kitesurfing and roofing.</p>
                 <p><strong> Tools: </strong> Illustrator.</p>
@@ -55,6 +56,7 @@
         <span></span>
         <h3>Contact</h3>
         <section>
+            <h4>hi</h4>
             <ul>
                 <li><a href="mailto:annika.mekkelholt@hva.nl">Annika.mekkelholt@hva.nl</a></Li>
                 <Li>+31 6 16364592</Li>
