--- a/html/Annika.html
+++ b/html/Annika.html
@@ -43,6 +43,7 @@
                     </a>
             </section>
             <section>
+                <h3>hidden</h3>
                 <p><strong> Client: </strong> Hogeschool van Amsterdam</p>
                 <p><strong>Challenge: </strong>Design an one pager for a restaurant using only shapes and colors.</p>
                 <p><strong> Tools: </strong> Illustrator.</p>
@@ -56,6 +57,7 @@
         <span></span>
         <h3>Contact</h3>
         <section>
+            <h4>hi</h4>
             <ul>
                 <li><a href="mailto:annika.mekkelholt@hva.nl">Annika.mekkelholt@hva.nl</a></Li>
                 <Li>+31 6 16364592</Li>
