--- a/html/Aboutme.html
+++ b/html/Aboutme.html
@@ -40,7 +40,7 @@
                <a href="../pdf/CV.pdf" download="CV.pdf" target="_blank">
                 Download my CV</a>
             </section>
-            <img src="../Img/CVfotocropped.png" alt="a picture of me">
+            <img src="../Img/CVfotocropped.png" alt="a picture of me" onmouseover="changeImage()" onmouseout="restoreImage()">
         </div>
         
         <section>
