--- a/html/Aboutme.html
+++ b/html/Aboutme.html
@@ -26,8 +26,7 @@
                 <h2>This is hidden</h2>
                 <a href="../index.html"></a>
                 <p><strong>HI!</strong>My name is Annika Mekkelholt and I'm studying Communication & Multimedia Design at HvA. 
-                I love concerts, friends, animals and to travel! I want to get as much life experience as i can get and learn 
-                so much from people who have different 'life-styles' as me.</p>
+                I love concerts, friends, animals and to travel! I want to get as much life experience as i can get.</p>
                 <p>My dream is to travel the world while working and I really want to volunteer more in beautiful places with beautiful
                 people and help those who need it;). I already did one volunteer project in Thailand,2022 and I had the best time there. 
                 It made me want to do more in the future. 
