--- a/html/Aboutme.html
+++ b/html/Aboutme.html
@@ -39,7 +39,7 @@
                <a href="../pdf/CV.pdf" download="CV.pdf" target="_blank">
                 Download my CV</a>
             </section>
-            <img src="../Img/CVfotocropped.png" alt="a picture of me" onmouseover="changeImage()" onmouseout="restoreImage()">
+            <img src="../Img/CVfotocropped.png" alt="a picture of me">
         </div>
         
         <section>
@@ -61,16 +61,46 @@
         </section>
         <h3>A summary of my life</h3>
         <ul>
-            <li><img src="../Img/Cars.png" alt="My cars halloween costume">    </li>
-            <li><img src="../Img/Vietnam.png" alt="My vacation in vietnam with a friend">    </li>
-            <li><img src="../Img/Tijger.png" alt="My cat"></li> 
-            <li><img src="../Img/Harryshow.png" alt="Harry styles in concert"></li>
-            <li><img src="../Img/Bodi.png" alt="My dog"></li> 
-            <li><img src="../Img/Thailand.png" alt="Volunteer work in thailand with elephants"></li>
-            <li><img src="../Img/Poland.png" alt="My vacation in poland"></li> 
-            <li><img src="../Img/iceskating.png" alt="winter 2022 while iceskating"></li> 
-            <li><img src="../Img/park.png" alt="walk in the park with my dog and mom"></li> 
-            <li><img src="../Img/friends_thailand.png" alt="My friends and i in thailand enjoying the pool"></li> 
+            <li>
+                <h3>Halloween '23</h3>
+                <img src="../Img/Cars.png" alt="My cars halloween costume">
+            </li>
+            <li>
+                <h3>Vietnam '23</h3>
+                <img src="../Img/Vietnam.png" alt="My vacation in vietnam with a friend">
+            </li>
+            <li>
+                <h3>My cat</h3>
+                <img src="../Img/Tijger.png" alt="My cat">
+            </li> 
+            <li>
+                <h3>Harry Styles Concert '23</h3>
+                <img src="../Img/Harryshow.png" alt="Harry styles in concert">
+            </li>
+            <li>
+                <h3>My dog</h3>
+                <img src="../Img/Bodi.png" alt="My dog">
+            </li> 
+            <li>
+                <h3>Thailand '22</h3>
+                <img src="../Img/Thailand.png" alt="Volunteer work in thailand with elephants">
+            </li>
+            <li>
+                <h3>Poland trip '23</h3>
+                <img src="../Img/Poland.png" alt="My vacation in poland">
+            </li> 
+            <li>
+                <h3>Ice skating</h3>
+                <img src="../Img/iceskating.png" alt="winter 2022 while iceskating">
+            </li> 
+            <li>
+                <h3>Park with my dog</h3>
+                <img src="../Img/park.png" alt="walk in the park with my dog and mom">
+            </li> 
+            <li>
+                <h3>Friends in thailand</h3>
+                <img src="../Img/friends_thailand.png" alt="My friends and i in thailand enjoying the pool">
+            </li> 
        </ul>
         
     </main>
@@ -88,7 +118,5 @@
         </section>
         <img src="../Img/LogoAM.png" alt="my logo">
     </footer>
-
-    <script defer src="../script.js"></script>
 </body>
 </html>
