--- a/html/Aboutme.html
+++ b/html/Aboutme.html
@@ -98,9 +98,14 @@
                 <img src="../Img/park.png" alt="walk in the park with my dog and mom">
             </li> 
             <li>
+                <h3>Volleyball</h3>
+                <img src="../Img/Volleyball.png" alt="me trying to serve in volleyball">
+            </li> 
+            <li>
                 <h3>Friends in thailand</h3>
                 <img src="../Img/friends_thailand.png" alt="My friends and i in thailand enjoying the pool">
             </li> 
+
        </ul>
         
     </main>
