--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             </ul>
         </nav>
     </header>
+
     <main>
         <section> 
             <span></span>
@@ -32,7 +33,7 @@
         <section id="portfolio">  
             <h2>Marked</h2>
             <p>MARKED was my first individual project at school,
-                 where we had to help inter-national students explore
+                 where we had to help international students explore
                   Amsterdam. The persona wanted to explore the good
                   cheap markets and so I based MARKED on that.</p>
             <a href="html/Marked.html">See More</a>
