--- a/html/Absolut.html
+++ b/html/Absolut.html
@@ -36,7 +36,8 @@
                      right order (headings, paragraphs and img).</p>
                 <p>This was the first subject of the year and I thought it was a really interesting subject. 
                     I have learned a lot in this profession and have also invested a lot of time in it.</p>
-                <p>And I just want to say that below is a mockup of my site, but pink and that I am very proud of it.
+                <p>And I just want to say that below is a mockup of a phone with a pink layout, that is what I created with Javascript and I am really proud of that.
+                    On the second page that is a picture of the cardboard version of the bottle and I wanted to spice it up, so I used a button to change the layout colors.
                     That's one of the 5 things I added extra. With a button you can change the blue layout to the pink layout!</p>
         
                     <p><em>*Put in on mobile version to get the real site, because it's not responsive:)</em></p>
