--- a/html/Annika.html
+++ b/html/Annika.html
@@ -29,7 +29,7 @@
         <div>
             <section>
                 <h3> Project info</h3>
-                 <p>In the first year of my CMD course, I created a restaurant for a subject and my project needed to be  inspired 
+                 <p>In the first year of my CMD studies, I created a restaurant for a subject and my project needed to be  inspired 
                     by the artist named Hendrik N. Werkman. He was a letterpress printer, but later he became an expressionist artist.
                     He used his experience with printing for his art, and therefore made all printed art.</p>
                 <p>The intention of this project was to create a restaurant, where you pay attention to shapes, typography and colors. 
