--- a/html/Mekkactive.html
+++ b/html/Mekkactive.html
@@ -35,7 +35,7 @@
                  <p>An acquaintance of mine just became self-employed and asked if I could make a logo to brighten 
                     up his name. Of course I did that with love! At first I came up with things that I liked,
                     but he didn't think that was something for his company, namely kitesurfing and roofing, and 
-                    gave reasons for what he thought could be done.</p>
+                    gave example for what he thought was nice.</p>
                 <p>This was also my first assignment outside of my studies and I immediately enjoyed doing something different. 
                     I didn't put much time into it, especially with sketches, I do want to put more time into that in the future.</p>
             </section>
