--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <p>A personal project for a self-employed person. He asked for a 
                 logo with M&A in it, so first I gave him a few ideas and finally
                 he gave me directions on how he wanted it and this is what
-                came out..</p>
+                came out.</p>
                 <a href="html/Mekkactive.html">See More</a>
             <img src="Img/logosven.png" alt="Logo with a black M and a Blue A with a wave">
         </section>
