--- a/html/Aboutme.html
+++ b/html/Aboutme.html
@@ -29,8 +29,8 @@
                 I love concerts, friends, animals and to travel! I want to get as much life experience as I can get.</p>
                 <p>My dream is to travel the world while working and I really want to volunteer more in beautiful places with beautiful
                 people and help those who need it;). I already did one volunteer project in Thailand, 2022 and I had the best time there. 
-                It made me want to do more in the future. 
-                My biggest passion is definitely traveling as far as I can go, I have a long way to go but I already 
+                It made me want to do more in the future.</p> 
+                <p>My biggest passion is definitely traveling as far as I can go, I have a long way to go but I already 
                 have my bucket list and things planned in the future.</p>
                 <p>I also have been creative since I was little and especially with drawing and painting. Now 
                 I really enjoy digital design in collaboration with coding.</p>
